<resources>
    <string name="app_name">ActivityGO</string>
    <string name="FirstNameText">"  "Primeiro Nome</string>
    <string name="LastNameText">"  "Apelido</string>
    <string name="EmailSignUp">"  "Email</string>
    <string name="WeightSignUp">"  "Peso</string>
    <string name="HeightSignUp">"  "Altura (cm)</string>
    <string name="PasswordSignUp">"  "Palavra-passe</string>
    <string name="reTypePasswordSignUp">"  "Confirme a palavra-passe</string>
    <string name="GeneroSignUp">"  "Género</string>
    <string name="nav_run">Run</string>
    <string name="nav_bicepe">Challenges</string>
    <string name="nav_achievements">Achievements</string>
    <string name="nav_rankings">Rankings</string>
    <string name="nav_groups">Groups</string>
    <string name="conquistas">Conquistas: </string>

    <string name="NomeGrupo">"  "Nome do Grupo</string>
    <string name="DescricaoGrupo">"  "Descrição</string>
    <string name="DesportoGrupo">"  "Desporto</string>

    <string name="Data">Data</string>
    <string name="Duracao">Duração</string>
    <string name="Distancia">Distância</string>

    <string name="QueroRegistar"><u>Quero Registar-me!</u></string>

    <string name="HistoricoCorridas">Histórico de Corridas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group_tab">GroupTab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="contactosImportantes">
        <item>Contactos Importantes</item>
        <item>Emergências: 112</item>
        <item>PSP Lisboa: 111222333</item>
        <item>Inem Lisboa: 111222333</item>
    </string-array>

    <string-array name="faqs">
        <item>FAQS</item>
        <item>Como posso alterar o meu perfil?</item>
        <item>Como posso eliminar a minha conta?</item>
        <item>Como posso alterar os meus desportos favoritos?</item>
        <item>Onde posso tirar mais dúvidas?</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
