<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/run"
        android:icon="@drawable/ic_running"
        android:title="Escolher"></item>
    <item
        android:id="@+id/chalengeItem"
        android:icon="@drawable/ic_check"
        android:title="@string/nav_bicepe" />
    <item
        android:id="@+id/achievementItem"
        android:icon="@drawable/ic_flag"
        android:title="@string/nav_achievements" />
    <item
        android:id="@+id/RankingItem"
        android:icon="@drawable/ic_trophy"
        android:title="@string/nav_rankings" />
    <item
        android:id="@+id/GroupsItem"
        android:icon="@drawable/ic_multiple_users_silhouette"
        android:title="@string/nav_groups" />

</menu>