<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329d92"
    tools:context=".CriarGrupoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/NomeCriarGrupo"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="-75dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/edit_text_shape2"
                android:ems="10"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:hint="@string/NomeGrupo"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Descricao"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="-75dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape2"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:hint="@string/DescricaoGrupo"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <EditText
                android:id="@+id/DesportoEscolhido"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="-75dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape2"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/DesportoGrupo"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <Button
                android:id="@+id/buttonCriar"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="-55dp"
                android:background="@drawable/button_border"
                android:text="Criar"
                android:textColor="@color/whiteLetters"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>