<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329d92"
    tools:context=".ChangeProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/primeiroNomeText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/user_icon3"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/FirstNameText"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/apelidoNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/user_icon3"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/LastNameText"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <EditText
                android:id="@+id/dataNascimentoDateText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/date_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="    Data de Nascimento"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <EditText
                android:id="@+id/paisUserNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/flag_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="  País"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <EditText
                android:id="@+id/emailNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/EmailSignUp"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LastNameText" />

            <EditText
                android:id="@+id/weightNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/weight_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/WeightSignUp"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailText" />

            <EditText
                android:id="@+id/heightNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/height_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/HeightSignUp"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WeightText" />
            
            <TextView
                android:id="@+id/informacaoPrivada"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Informação Privada:"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/privateUsernameNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/user_icon4"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="    Username"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <EditText
                android:id="@+id/privatePasswordNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/PasswordSignUp"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/HeightText" />

            <EditText
                android:id="@+id/privateInfoPasswordNameText"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_edittext_states"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/reTypePasswordSignUp"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/HeightText" />

            <Button
                android:id="@+id/buttonConfirmarAlterarPerfil"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_edittext_states"
                android:fontFamily="sans-serif"
                android:text="Alterar Perfil"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                app:layout_constraintVertical_bias="0.398" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>